--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -7,6 +7,7 @@ parts:
     - file: some_content/overview.md
       sections:
       - file: some_content/text_and_code.ipynb
+      - file: some_content/newpage.md
     - file: references.md
     - file: changelog.md
     - file: credits.md
